objects/PRMAccountOwnerAssignment__c.object
<CustomObject>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PRMAccountOwnerAssignmentRulesUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Channel</label>
        <referenceTo>CountryChannels__c</referenceTo>
        <relationshipLabel>PRM Account Owner Assignment Rules</relationshipLabel>
        <relationshipName>PRM_Account_Owner_Assignment_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>PRM Account Owner Assignment Rules</relationshipLabel>
        <relationshipName>PRMAccountOwnerAssignmentRulesCountry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherPRMAccountOwnerAssignmentc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Province</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>StateProvince__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>PRM Account Owner Assignment Rules</relationshipLabel>
        <relationshipName>PRMAccountOwnerAssignmentRulesState</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubClassification__c</fullName>
        <label>Sub - Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classification__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BM1</fullName>
                </value>
                <value>
                    <fullName>BM2</fullName>
                </value>
                <value>
                    <fullName>BM3</fullName>
                </value>
                <value>
                    <fullName>BM4</fullName>
                </value>
                <value>
                    <fullName>BM5</fullName>
                </value>
                <value>
                    <fullName>BM6</fullName>
                </value>
                <value>
                    <fullName>BM7</fullName>
                </value>
                <value>
                    <fullName>BM8</fullName>
                </value>
                <value>
                    <fullName>EU3</fullName>
                </value>
                <value>
                    <fullName>EU5</fullName>
                </value>
                <value>
                    <fullName>EU6</fullName>
                </value>
                <value>
                    <fullName>EU7</fullName>
                </value>
                <value>
                    <fullName>EUA</fullName>
                </value>
                <value>
                    <fullName>EUB</fullName>
                </value>
                <value>
                    <fullName>LC1</fullName>
                </value>
                <value>
                    <fullName>LC2</fullName>
                </value>
                <value>
                    <fullName>LC3</fullName>
                </value>
                <value>
                    <fullName>LC4</fullName>
                </value>
                <value>
                    <fullName>LCA</fullName>
                </value>
                <value>
                    <fullName>LCB</fullName>
                </value>
                <value>
                    <fullName>OM1</fullName>
                </value>
                <value>
                    <fullName>OM3</fullName>
                </value>
                <value>
                    <fullName>OM4</fullName>
                </value>
                <value>
                    <fullName>OM6</fullName>
                </value>
                <value>
                    <fullName>OM7</fullName>
                </value>
                <value>
                    <fullName>OM8</fullName>
                </value>
                <value>
                    <fullName>PB1</fullName>
                </value>
                <value>
                    <fullName>PB3</fullName>
                </value>
                <value>
                    <fullName>PB4</fullName>
                </value>
                <value>
                    <fullName>PB5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_LookupKey__c</fullName>
        <label>TECH_LookupKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PRM Account Owner Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Classification__c</columns>
        <columns>SubClassification__c</columns>
        <columns>CountryChannel__c</columns>
        <columns>AccountOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PRM Account Owner Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Account Owner Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>